test/bad/generics/type09.px

func f<Any A, Any B, Any C>(A,B->C p) def
    return

func g(Int x) Bool def
    return x > 0

print f(g)
